# QazVelo-Engine

./: .env.example  .gitignore  .replit  CMakeLists.txt  CMakelists.txt  Dockerfile.frontend  Dockerfile.proxy  README.md  benchmark_core.py  docker-compose.yml  main.py  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  replit.md  replit.nix  start.sh  test-plan-auth.md  test_ws.py
.agents/memory/: MEMORY.md  binance-streaming.md  replit-git-push.md
.migration-backup/: .gitignore  .replit  CMakeLists.txt  package-lock.json  pyproject.toml  test-plan-auth-split.md  test-plan-e2e.md  test-report.md
.migration-backup/app/: main.py
.migration-backup/app/models/: alerts.py  wallet.py
.migration-backup/app/services/: analytics.py  wallet.py
.migration-backup/frontend/: .env.local.example  .gitignore  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json
.migration-backup/frontend/app/: globals.css  layout.tsx  providers.tsx
.migration-backup/frontend/app/(dashboard)/: layout.tsx  page.tsx
.migration-backup/frontend/app/(dashboard)/analytics/: page.tsx
.migration-backup/frontend/app/(dashboard)/settings/: page.tsx
.migration-backup/frontend/components/: AuthScreen.tsx  LoginForm.tsx  RegisterForm.tsx  SettingsView.tsx  Sidebar.tsx  WalletView.tsx  navbar.tsx
.migration-backup/frontend/lib/: api.ts  auth.tsx  format.ts  types.ts
.migration-backup/src_cpp/: analytics.cpp  bindings.cpp
app/: main.py
app/api/: alerts.py  analytics.py  auth.py  users.py  wallet.py  worker.py  ws_analytics.py
app/core/: config.py  database.py  security.py
app/models/: analytics.py  users.py  wallet.py
app/schemas/: analytics.py  users.py  wallet.py
app/services/: analytics.py  market_data.py  wallet.py
artifacts/api-server/src/: app.ts  index.ts
artifacts/qazvelo/: .tsbuildinfo  index.html  package.json  tsconfig.json  vite.config.ts
artifacts/qazvelo/.replit-artifact/: artifact.toml
artifacts/qazvelo/src/: App.tsx  index.css
artifacts/qazvelo/src/components/: AnalyticsView.tsx  AuthScreen.tsx  BuySellCard.tsx  ErrorBoundary.tsx  LoginForm.tsx  MarketOverview.tsx  Navbar.tsx  RegisterForm.tsx  SettingsView.tsx  Sidebar.tsx  WalletView.tsx
artifacts/qazvelo/src/components/ui/: sonner.tsx
artifacts/qazvelo/src/lib/: api.ts  auth.tsx  authError.ts  ws.ts
backend/: .dev_secret_key  Dockerfile  qazvelo_analytics.py  requirements.txt  run.py
backend/app/: main.py
backend/app/api/: analytics.py  binance.py  health.py  users.py  worker.py  ws_analytics.py  ws_market.py
backend/app/core/: cache.py  config.py  connection_manager.py  database.py
backend/app/models/: analytics.py
backend/app/services/: market_data.py  wallet.py
frontend/: TEST_PLAYWRIGHT.md  package-lock.json  package.json  tailwind.config.ts
frontend/app/: layout.tsx  page.tsx
frontend/app/(dashboard)/: layout.tsx
frontend/app/(dashboard)/analytics/: page.tsx
frontend/app/(dashboard)/wallet/: page.tsx
frontend/app/analytics/: page.tsx
frontend/components/: AnalyticsView.tsx  AuthScreen.tsx  BuySellCard.tsx  MarketOverview.tsx  SettingsView.tsx  Sidebar.tsx  WalletView.tsx  navbar.tsx
frontend/components/ui/: button.tsx
frontend/lib/: api.ts  auth.tsx  authError.ts  types.ts
frontend/tests/e2e/: auth-wallet.spec.ts
scripts/: start-all.sh
src_cpp/: bindings.cpp
