[tool.poetry]
name = "keryx-engine"
version = "0.1.0"
description = "Real-time Market Analytics Engine for The 100 Percent"
authors = ["Hayder <your-email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.111.0"
uvicorn = {extras = ["standard"], version = "0.30.1"}
pydantic = "2.7.4"
pydantic-settings = "2.3.3"
pyjwt = "2.8.0"
asyncpg = "0.29.0"
sqlmodel = "0.0.19"
aiokafka = "0.11.0"
fastapi-limiter = "0.1.6"
redis = "^5.0.0"     

[tool.poetry.group.dev.dependencies]
black = "24.4.2"         
pytest = "8.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"