[tool.poetry]
name = "keryx-engine"
version = "0.1.0"
description = "Real-time Market Analytics Engine for The 100 Percent"
authors = ["Hayder <your-email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.115.6"
uvicorn = {extras = ["standard"], version = "^0.49.0"}
pydantic = {extras = ["email"], version = "^2.13.4"}
pydantic-settings = "2.7.1"
pyjwt = "2.8.0"
asyncpg = "0.30.0"
sqlmodel = "0.0.19"
aiokafka = "0.11.0"
fastapi-limiter = "0.1.6"
redis = "^5.0.0"     
yfinance = "^1.4.1"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pybind11 = "^3.0.4"
sqlalchemy = "^2.0.51"
websockets = "^16.0"
bcrypt = "^5.0.0"
psycopg2-binary = "^2.9.12"
email-validator = "^2.3.0"
httpx = "^0.28.1"

[tool.poetry.group.dev.dependencies]
black = "24.4.2"         
pytest = "8.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"