[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiokafka==0.11.0",
    "asyncpg==0.30.0",
    "bcrypt==4.3.0",
    "email-validator==2.3.0",
    "fakeredis==2.26.2",
    "fastapi==0.115.6",
    "fastapi-limiter==0.1.6",
    "httpx==0.28.1",
    "lupa==2.4",
    "passlib[bcrypt]==1.7.4",
    "pydantic-settings==2.7.1",
    "pydantic[email]==2.11.7",
    "pyjwt==2.8.0",
    "redis==5.2.1",
    "sqlalchemy==2.0.41",
    "uvicorn[standard]==0.34.0",
    "websockets==15.0.1",
    "yfinance==0.2.54",
]
