[tool.poetry]
name = "QazVelo-Engine"
version = "0.1.0"
description = "High-performance, real-time market analytics and paper trading engine with advanced quantitative analysis, alerts, and mock wallet management."
authors = ["Your Name <your-email@example.com>"]
packages = []
package-mode = false  # No root package, our code is in "app/" directory

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.6"
uvicorn = { extras = ["standard"], version = "^0.49.0" }
pydantic = { extras = ["email"], version = "^2.13.4" }
pydantic-settings = "^2.7.1"
pyjwt = "^2.8.0"
asyncpg = "^0.30.0"
sqlalchemy = "^2.0.51"
aiokafka = "^0.11.0"
fastapi-limiter = "^0.1.6"
redis = "^5.0.0"
yfinance = "^1.4.1"
passlib = { extras = ["bcrypt"], version = "^1.7.4" }
bcrypt = "^5.0.0"
email-validator = "^2.3.0"
httpx = "^0.28.1"
websockets = "^16.0"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
pytest = "^8.2.2"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
